# openvino-deepdive

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.sh
.github/: CODEOWNERS  TEMPLATE.md
benchmarks/: README.md
cmake/: README.md
custom_ops/: README.md
docs/: learning_roadmap.md
docs/build_openvino/: linux.md  windows.md
docs/cmake/: build_target.md  cmake_basics_explained.md  log_level.md  openvino_build_parameters.md  vscode.md
docs/conversion/: convert_model.md
docs/dependencies/: ultralytics.md
docs/models/: download_model_from_huggingface.md  yolo.md
docs/openvino_internals/: core_and_read_model.md  model_pipeline.md  thread_pool.md  thread_pool_global.md  thread_pool_numa.md
docs/unit_test/: run_specify_unit_test.md  specify_device_for_unit_test.md
docs/vscode/: extensions.md  f5_config_picker.md  project_build_and_debug.md
model_conversion/: convert_model_yolo.py
models/yolo/yolo26n_openvino_model/: metadata.yaml  yolo26n.xml
notebooks/: README.md
plugins/: README.md
quantization/: README.md
samples/cpp/: CMakeLists.txt  README.md  object_detection_yolo.cpp
samples/cpp/common/: log.hpp
samples/cpp/cv_mat_demo/: generate_demo.py  matrix_dump.txt
samples/cpp/tests/: CMakeLists.txt  packaged_task_future_demo_v1.cpp  packaged_task_future_demo_v2.cpp  promise_future_demo.cpp
samples/cpp/thread_pool/: CMakeLists.txt  model_pipeline_demo.cpp  thread_pool_demo.cpp  thread_pool_global_demo.cpp  thread_pool_numa_demo.cpp
samples/python/: object_detection_yolo.py
tests/: README.md
